<resources>
    <string name="app_name">Tuyển Sinh VIDO</string>
    <string name="name_colleges">CAO ĐẲNG VIỄN ĐÔNG</string>
    <string name="logo">logo</string>
    <string name="information">Thông Tin</string>
    <string name="home">Trang Chủ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="full_name">Họ và Tên:</string>
    <string name="scan">Quét Thông Tin</string>
    <string name="input">Nhập Thông Tin</string>
    <string name="non_profile">Bạn chưa có thông tin. Vui lòng tạo hồ sơ.</string>
    <string name="public_user">Khách</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="sign_in">Đăng ký</string>
    <string name="sent_email">Mã OTP đã được gửi về email</string>
    <string-array name="admissions_division">
        <item>Khối A</item>
        <item>Khối A1</item>
        <item>Khối B</item>
        <item>Khối C</item>
        <item>Khối D</item>
    </string-array>
    <string-array name="gender">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
    <string-array name="area">
        <item>KV1</item>
        <item>KV2</item>
        <item>KV2NT</item>
        <item>KV3</item>
    </string-array>
    <string-array name="consultants">
        <item>Cô Thu</item>
        <item>Đoàn trường CD đến trường</item>
        <item>Internet</item>
        <item>Sách, báo, tivi</item>
        <item>Người thân</item>
    </string-array>
</resources>