<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Sign.SignInActivity"
    android:paddingTop="30dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_retangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/nameColleges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_colleges"
        android:layout_marginTop="20dp"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/login"
        android:textColor="@color/light_green"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameColleges" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="45dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_password"
        android:drawableEnd="@drawable/ic_eye"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:textColor="@color/main_color"
        android:textSize="12sp"
        android:textStyle="normal"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/log_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/radius_btn_design"
        android:text="@string/login"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameColleges"
        app:layout_constraintVertical_bias=".85"/>

    <TextView
        android:id="@+id/sub_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bạn chưa có tài khoản?"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_btn" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Đăng ký ngay"
        android:textColor="@color/main_color"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sub_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/log_in_btn"
        app:layout_constraintHorizontal_bias="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>