<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/box_radius_with_title">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/nameCardDemo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@drawable/box_radius_with_title"
            android:orientation="vertical"
            android:tag="nameCard">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/non_profile"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:textStyle="italic" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:id="@+id/inputMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/add_img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/input"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/scanMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/scan_img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/scan"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nameCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameIC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_weight="10"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/scan"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/scan"
                    android:src="@drawable/ic_baseline_remove_red_eye" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/nc_item1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/nc_item2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/nc_item3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/nc_item4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/nc_item5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/nc_item6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>